--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
   <header class="page-header">
     <div class="container">
       <h1 class="page-header__title">About Paige</h1>
-      <p class="page-header__subtitle">The person behind the stories</p>
+      <p class="page-header__subtitle">The femme behind the fiction</p>
     </div>
   </header>
 
