--- a/about.html
+++ b/about.html
@@ -67,11 +67,11 @@
 
         <div class="about__text">
           <p>
-            I'm Paige Turner—and yes, <em>the name is absolutely intentional</em>. I write illustrated transgender fiction, and I've been reading TG stories since the early 2000s—from alt.sex.stories to Nifty and Sapphire to Fictionmania and TGStorytime. These stories shaped my understanding of transformation narratives, and after years of reading, I decided to create the kind of fiction I always wanted to find more of.
+            I'm Paige Turner, and yes, <em>the name is absolutely intentional</em>. I write illustrated transgender fiction, and I've been reading TG stories since the early 2000s—from alt.sex.stories to Nifty and Sapphire to Fictionmania and TGStorytime. These stories shaped my understanding of transformation narratives, and after years of reading, I decided to create the kind of fiction I always wanted to find more of.
           </p>
 
           <p>
-            I love slow builds where protagonists make reasonable decisions that accumulate into something irreversible, where they participate in their own transformation without realizing what's coming until it's too late. The loss of control, the moment of realization, the psychology of someone navigating an impossible situation—that's what keeps me writing. I believe the best transformation fiction doesn't just describe change—<em>it makes you feel it</em>.
+            I love slow builds where protagonists make reasonable decisions that accumulate into something irreversible, where they participate in their own transformation without realizing what's coming until it's too late. The loss of control, the moment of realization, the psychology of someone navigating an impossible situation—that's what keeps me writing. I believe the best transformation fiction doesn't just describe change; <em>it makes you feel it</em>.
           </p>
 
           <p>
@@ -101,7 +101,7 @@
           <h3 class="mt-xl">Let's Connect!</h3>
 
           <p>
-            I love hearing from readers! Whether you want to chat about stories, share your thoughts on a recent read, or just say hello, you can find me on Discord or drop me an email. I'm always happy to geek out about transformation fiction with fellow enthusiasts.
+            I love hearing from readers! Whether you want to chat about stories, share your thoughts on a recent read, or just say hello, you can find me on Discord or drop me an email. I'm always happy to geek out about the genre with fellow enthusiasts.
           </p>
 
           <div class="btn-group mt-lg">
