--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
           </p>
 
           <p>
-            I have a total weakness for a <em>slow build</em>. There’s nothing better than a protagonist making perfectly reasonable, logical decisions that slowly snowball into something irreversible. Wwhere they’re practically helping build their own snare without realizing it until the door clicks shut. That "oh no" moment of realization that there's no going back. That’s the spark that keeps me writing. If I'm doing it right, I won't just describe the change; <em>you will feel it.</em>
+            I have a total weakness for a <em>slow build</em>. There’s nothing better than a protagonist making perfectly reasonable, logical decisions that slowly snowball into something irreversible. Where they’re practically helping build their own snare without realizing it until the door clicks shut. That "oh no" moment of realization that there's no going back. That’s the spark that keeps me writing. If I'm doing it right, I won't just describe the change; <em>you will feel it.</em>
           </p>
 
           <p>
