--- a/library.html
+++ b/library.html
@@ -74,7 +74,7 @@
 
       <!-- Work Card: Effortless Beauty -->
       <a href="works/effortless-beauty/index.html" class="work-card">
-        <div class="work-card__image work-card__image--letterbox">
+        <div class="work-card__image work-card__image">
           <img src="images/works/effortless-beauty-cover.jpg" alt="Effortless Beauty Cover">
         </div>
         <div class="work-card__content">
@@ -91,7 +91,7 @@
 
       <!-- Work Card: BFFs -->
       <a href="works/bffs/index.html" class="work-card">
-        <div class="work-card__image work-card__image--letterbox">
+        <div class="work-card__image work-card__image">
           <img src="images/works/bffs-cover.jpg" alt="BFFs Cover">
         </div>
         <div class="work-card__content">
