--- a/index.html
+++ b/index.html
@@ -114,29 +114,35 @@
       </a>
 
       <!-- Featured Work 2 -->
-      <a href="https://discord.gg/w8ne2f7nX8" target="_blank" rel="noopener noreferrer" class="work-card">
-        <div class="work-card__image work-card__image--letterbox">
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 400'%3E%3Crect fill='%23D4A5A5' width='400' height='400'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='sans-serif' font-size='24' fill='%23FFFFFF' opacity='0.7'%3ECover Coming Soon%3C/text%3E%3C/svg%3E" alt="Placeholder cover">
+      <a href="works/effortless-beauty/index.html" class="work-card">
+        <div class="work-card__image work-card__image">
+          <img src="images/works/effortless-beauty-cover.jpg" alt="Effortless Beauty Cover">
         </div>
         <div class="work-card__content">
-          <span class="work-card__tag">Short Story</span>
-          <h3 class="work-card__title">Coming Soon</h3>
+        <span class="work-card__tag">Short Story</span>
+          <h2 class="work-card__title">Effortless Beauty</h2>
+          <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
+            #Magical #Adult #Workplace
+          </p>
           <p class="work-card__excerpt">
-            More stories are on their way! Check back soon or join the Discord to be the first to know.
+            Sam Lane has perfected the art of minimal effort—working IT from his couch, taking every possible shortcut, and avoiding anything that resembles actual work. When a mysterious free gym trial appears in his mail, it seems like the universe finally delivering a solution that requires zero initiative on his part. But after just a few gentle yoga classes and convenient lifestyle changes, Sam discovers that some shortcuts come with dramatic consequences.
           </p>
         </div>
       </a>
 
       <!-- Featured Work 3 -->
-      <a href="blog.html" class="work-card">
-        <div class="work-card__image work-card__image--letterbox">
-          <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 400 400'%3E%3Crect fill='%23C47D7D' width='400' height='400'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='sans-serif' font-size='24' fill='%23FFFFFF' opacity='0.7'%3ECover Coming Soon%3C/text%3E%3C/svg%3E" alt="Placeholder cover">
+      <a href="works/bffs/index.html" class="work-card">
+        <div class="work-card__image work-card__image">
+          <img src="images/works/bffs-cover.jpg" alt="BFFs Cover">
         </div>
         <div class="work-card__content">
-          <span class="work-card__tag">Series</span>
-          <h3 class="work-card__title">Coming Soon</h3>
+          <span class="work-card__tag">Short Story</span>
+          <h2 class="work-card__title">Best Friends Forever</h2>
+          <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
+            #MedTech #Adult #Deals/Bets/Dares
+          </p>
           <p class="work-card__excerpt">
-            I've got plenty of stories brewing. Stay tuned for updates!
+            When Trace’s suspicious girlfriend demands he bring a chaperone to his friend’s wedding, he talks his best friend Gabe into helping him teach her a lesson. What starts as Trace’s simple plan for harmless revenge quickly spirals into something far more complicated than either of them expected.
           </p>
         </div>
       </a>
