--- a/works/the-hex-saga/index.html
+++ b/works/the-hex-saga/index.html
@@ -3,9 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="The Hex Saga - Transformation fiction by Paige Turner">
+  <meta name="description" content="Hexed Holidays - Transformation fiction by Paige Turner">
 
-  <title>The Hex Saga | Paige Turner</title>
+  <title>Hexed Holidays | Paige Turner</title>
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -51,8 +51,8 @@
       <div style="position: sticky; top: calc(var(--space-3xl) + 60px);">
         <div class="work-header__cover" style="margin-bottom: var(--space-xl);">
           <figure>
-            <a href="../../images/works/the-hex-saga-cover.jpg">
-              <img src="../../images/works/the-hex-saga-cover.jpg" alt="The Hex Saga Cover" class="work-header__image" style="width: 100%; aspect-ratio: 3/4; border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);" loading="lazy">
+            <a href="../../images/works/hexed-cover.jpg">
+              <img src="../../images/works/hexed-cover.jpg" alt="Hexed Holidays Cover" class="work-header__image" style="width: 100%; aspect-ratio: 3/4; border-radius: var(--radius-lg); box-shadow: var(--shadow-lg);" loading="lazy">
             </a>
           </figure>
         </div>
