--- a/works/yvonne-girl/index.html
+++ b/works/yvonne-girl/index.html
@@ -63,16 +63,17 @@
             Novel
           </p>
           <p style="font-size: var(--text-sm); color: var(--color-rose); margin-bottom: var(--space-lg); font-weight: 500;">
-            #Political #MedTech #Workplace
+            #Realistic #Adult #Workplace
           </p>
           <p class="work-header__description" style="margin-bottom: var(--space-lg);">
-            When ambitious attorney Yvonne finds herself at the center of a high-stakes political campaign, she discovers that winning the election might require more than just legal expertise—it might require becoming someone entirely different. In a world where image is everything and transformation technology offers the ultimate campaign makeover, the line between political strategy and personal identity begins to blur.
-          </p>
+            A seasoned political operative’s career managing an arrogant governor’s scandals reaches a breaking point when a heated confrontation pushes him past his limits. When his boss’s crude power play forces him into an impossible choice, he makes a shocking decision that will either destroy his career or become the ultimate act of defiance—not knowing that this single moment of stubborn pride will set in motion a chain of events that will transform everything he thought he knew about power, loyalty, and himself.          </p>
           <a href="../../works/pdfs/yvonne-girl.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);">
-            Download Author's Edition PDF
+             <!--Download Author's Edition PDF -->
+            PDF Coming Soon!
           </a>
           <a href="../../works/epubs/yvonne-girl.epub" class="btn btn--secondary" style="width: 100%;">
-            Download Author's Edition EPUB
+            <!--Download Author's Edition EPUB -->
+            EPUB Coming Soon!
           </a>
         </div>
       </div>
