--- a/works/hexed-holidays/index.html
+++ b/works/hexed-holidays/index.html
@@ -63,16 +63,18 @@
             Series
           </p>
           <p style="font-size: var(--text-sm); color: var(--color-rose); margin-bottom: var(--space-lg); font-weight: 500;">
-            #Magic #College #Holiday
+            #Magical #College #Mental Changes
           </p>
           <p class="work-header__description" style="margin-bottom: var(--space-lg;">
-            [USER INSERT TEXT HERE]
+            Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and maybe one more thing if I ever get around to writing it—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
           </p>
           <a href="../../works/pdfs/the-hex-saga.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);">
-            Download Author's Edition PDF
+            <!--Download Author's Edition PDF -->
+            PDF Coming Soon!
           </a>
           <a href="../../works/epubs/the-hex-saga.epub" class="btn btn--secondary" style="width: 100%;">
-            Download Author's Edition EPUB
+            <!--Download Author's Edition EPUB -->
+            EPUB Coming Soon!
           </a>
         </div>
       </div>
