--- a/index.html
+++ b/index.html
@@ -114,36 +114,35 @@
       </a>
 
       <!-- Featured Work 2 -->
-      <a href="works/effortless-beauty/index.html" class="work-card">
-        <div class="work-card__image work-card__image">
-          <img src="images/works/effortless-beauty-cover.jpg" alt="Effortless Beauty Cover" loading="lazy">
+      <a href="works/hexed-holidays/index.html" class="work-card">
+        <div class="work-card__image">
+          <img src="images/works/hexed-cover.jpg" alt="Hexed Holidays Cover" loading="lazy">
         </div>
         <div class="work-card__content">
-        <span class="work-card__tag">Short Story</span>
-          <h2 class="work-card__title">Effortless Beauty</h2>
+          <span class="work-card__tag">Series</span>
+          <h2 class="work-card__title">Hexed Holidays</h2>
           <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
-            #Magical #Adult #Workplace
+            #Magical #College #Mental Changes
           </p>
           <p class="work-card__excerpt">
-            Sam Lane has perfected the art of minimal effort—working IT from his couch, taking every possible shortcut, and avoiding anything that resembles actual work. When a mysterious free gym trial appears in his mail, it seems like the universe finally delivering a solution that requires zero initiative on his part. But after just a few gentle yoga classes and convenient lifestyle changes, Sam discovers that some shortcuts come with dramatic consequences.
+            Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and maybe one more thing if I ever get around to writing it—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
           </p>
         </div>
       </a>
 
       <!-- Featured Work 3 -->
-      <a href="works/bffs/index.html" class="work-card">
-        <div class="work-card__image work-card__image">
-          <img src="images/works/bffs-cover.jpg" alt="BFFs Cover" loading="lazy">
+      <a href="works/yvonne-girl/index.html" class="work-card">
+        <div class="work-card__image">
+          <img src="images/works/yvonne-girl-cover.jpg" alt="Yvonne Girl Cover" loading="lazy">
         </div>
         <div class="work-card__content">
-          <span class="work-card__tag">Short Story</span>
-          <h2 class="work-card__title">Best Friends Forever</h2>
+          <span class="work-card__tag">Novel</span>
+          <h2 class="work-card__title">Yvonne Girl</h2>
           <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
-            #MedTech #Adult #Deals/Bets/Dares
+            #Realistic #Adult #Workplace
           </p>
           <p class="work-card__excerpt">
-            When Trace’s suspicious girlfriend demands he bring a chaperone to his friend’s wedding, he talks his best friend Gabe into helping him teach her a lesson. What starts as Trace’s simple plan for harmless revenge quickly spirals into something far more complicated than either of them expected.
-          </p>
+            A seasoned political operative’s career managing an arrogant governor’s scandals reaches a breaking point when a heated confrontation pushes him past his limits. When his boss’s crude power play forces him into an impossible choice, he makes a shocking decision that will either destroy his career or become the ultimate act of defiance—not knowing that this single moment of stubborn pride will set in motion a chain of events that will transform everything he thought he knew about power, loyalty, and himself.          </p>
         </div>
       </a>
     </div>
