--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
         <p class="journal-card__excerpt">
           The old design was at least a couple months old, so it was time for a new one, right?
         </p>
-        <span class="journal-card__link">Keep reading →</span>
+        <span class="journal-card__link">Keep reading</span>
       </a>
     </div>
   </section>
