--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
       <!-- Email Signup Form -->
       <div class="connect__newsletter">
         <p class="connect__text">
-          Not feeling interactive? Subscribe to get notified when I publish new stories. No spam, I promise!
+          Not feeling interactive? I <em>totally</em> get it. Subscribe below to get notified when I publish new stories. No spam, I promise!
         </p>
         <form
           action="https://buttondown.com/api/emails/embed-subscribe/paigeturnertg"
