--- a/works/highway-to-elle/index.html
+++ b/works/highway-to-elle/index.html
@@ -68,10 +68,10 @@
           <p class="work-header__description" style="margin-bottom: var(--space-lg);">
             When star wide receiver Logan Turner suffers a devastating back injury that ends his football career and costs him his scholarship, desperation leads him to a mysterious facility promising athletic repurposing and a second chance. Under the care of the enigmatic Dr. Gupta, Logan begins a process he doesn't fully understand—as strange occurrences mount at the facility, he faces a transformation far more profound than he ever anticipated, unaware that the path ahead is nothing like he could have imagined.
           </p>
-          <a href="../../works/pdfs/highway-to-elle.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);">
+          <a href="../../works/pdfs/highway-to-elle.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="highway-to-elle.pdf">
             Download Author's Edition PDF
           </a>
-          <a href="../../works/epubs/highway-to-elle.epub" class="btn btn--secondary" style="width: 100%;">
+          <a href="../../works/epubs/highway-to-elle.epub" class="btn btn--secondary" style="width: 100%;" download="highway-to-elle.epub">
             Download Author's Edition EPUB
           </a>
         </div>
