--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
       </div>
 
       <!-- Email Signup Form -->
-      <div class="connect__newsletter">
+      <!-- <div class="connect__newsletter">
         <p class="connect__text">
           Not feeling interactive? I <em>totally</em> get it. Subscribe below to get notified when I publish new stories. No spam, I promise!
         </p>
@@ -229,6 +229,13 @@
             </button>
           </div>
         </form>
+      </div> -->
+
+      <div class="connect__newsletter">
+        <p class="connect__text">
+          Not feeling interactive? I <em>totally</em> get it. 
+          <strong>The newsletter is currently under a quick maintenance update—check back in a few hours!</strong>
+        </p>
       </div>
     </div>
   </section>
