--- a/works/missing-xmas/part-3.html
+++ b/works/missing-xmas/part-3.html
@@ -81,7 +81,7 @@
 <p>Everything was still there. But smaller. Much smaller. His penis had shrunk to barely more than a nub, his testicles drawn up tight and diminished. He touched himself with trembling fingers, confirming what he was seeing.</p>
 <p>Still there. But for how much longer?</p>
 <p>Mark&#39;s lip quivered. This was real. This was happening. His body was changing whether he wanted it to or not.</p>
-<p>&quot;Get out,&quot; a voice in his head screamed. &quot;Get out of Pine Hollow before you change completely.&quot;</p>
+<p><em>Get out,</em> a voice in his head screamed. <em>Get out of Pine Hollow before you change completely.</em></p>
 <p>But if he was going to reverse this, he needed answers first. Mark took a shaky breath and reached for the nude bra Claire had provided. He fastened it-easier now, his fingers knew the motion-and adjusted it. The cups filled completely with his real breasts. No forms needed. No padding. Just him.</p>
 <p>The matching nude panties came next, sliding up his legs and settling over hips that were undeniably wider than they&#39;d been three days ago. The fabric hugged curves that were his own now. His shrunken genitalia barely registered under the delicate fabric.</p>
 <p>Then the jeans from last night. Mark stepped into them and pulled them up. They slid on easily, no resistance. No need to adjust anything, no need to tuck or arrange. The jeans fit his body perfectly, hugging his hips and thighs, the waistband sitting snugly at his narrow waist.</p>
@@ -119,12 +119,12 @@
 <p>Mark grabbed his messenger bag and reached for his laptop.</p>
 <p>The laptop.</p>
 <p>The article. His deadline. Tomorrow. Shit.</p>
-<p>Mark stood there, laptop in hand, and felt his resolve crumble. If he left now, spent the next several hours driving, even more flying home, he&#39;d never make his deadline. He needed to write it first. Today. Then he could leave this afetrnoon.</p>
+<p>Mark stood there, laptop in hand, and felt his resolve crumble. If he left now, spent the next several hours driving, even more flying home, he&#39;d never make his deadline. He needed to write it first. Today. Then he could leave this afternoon.</p>
 <p>Mark sat heavily on the bed and opened his laptop. He opened a new document, stared at the blank screen, and started typing.</p>
-<p>*Pine Hollow (pop. 1,200) is the kind of town that appears on Christmas cards-picturesque main street, historic buildings, a town square that could be a movie set. This weekend, they&#39;re hosting their annual Christmas Festival, a tradition that draws tourists from across the region.*</p>
+<p><em>Pine Hollow (pop. 1,200) is the kind of town that appears on Christmas cards-picturesque main street, historic buildings, a town square that could be a movie set. This weekend, they&#39;re hosting their annual Christmas Festival, a tradition that draws tourists from across the region.</em></p>
 <p>He stopped. Read it back. It was fine. Boring.</p>
 <p>Mark deleted it and started again.</p>
-<p>*The Pine Hollow Christmas Festival is under threat. Not from budget cuts or lack of interest, but from progress. Luke Shepherd, owner of Shepherd Tree Farm, is selling his family&#39;s land to a data center developer. The farm has been the centerpiece of the festival for three generations, but after his wife&#39;s death, Shepherd is ready to move on.*</p>
+<p><em>The Pine Hollow Christmas Festival is under threat. Not from budget cuts or lack of interest, but from progress. Luke Shepherd, owner of Shepherd Tree Farm, is selling his family&#39;s land to a data center developer. The farm has been the centerpiece of the festival for three generations, but after his wife&#39;s death, Shepherd is ready to move on.</em></p>
 <p>Better. More honest. But still missing something.</p>
 <p>Mark stopped and started, struggling for the next two hours to get his article written, deleting words almost as fast as he wrote them. He stared at the screen. He had all the pieces. The farm sale. The threat to local businesses. The town&#39;s dependence on Christmas tourism. Sarah&#39;s worried face. Claire&#39;s sadness. Emma&#39;s resigned acceptance.</p>
 <p>And Luke. Luke&#39;s pain, his guilt, his struggle between grief and responsibility.</p>
