--- a/works/missing-xmas/index.html
+++ b/works/missing-xmas/index.html
@@ -68,13 +68,11 @@
           <p class="work-header__description" style="margin-bottom: var(--space-lg;">
             Big-city journalist Mark Holly arrives in Pine Hollow to research an article about small-town Christmas. But one borrowed Christmas sweater, one registration mix-up, and one widowed tree farmer later, he finds he’s living a Hallmark movie come to life. Along the way, Mark learns that sometimes the story you end up writing isn’t always the one you were looking for.
           </p>
-          <a href="../../works/pdfs/story-name.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="story-name.pdf">
-            <!--Download Author's Edition PDF -->
-            PDF Coming Soon!
+          <a href="../../works/pdfs/missing-you-this-xmas.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="missing-you-this-xmas.pdf">
+            Download Author's Edition PDF
           </a>
-          <a href="../../works/epubs/story-name.epub" class="btn btn--secondary" style="width: 100%;" download="story-name.epub">
-            <!--Download Author's Edition EPUB -->
-            EPUB Coming Soon!
+          <a href="../../works/epubs/missing-you-this-xmas.epub" class="btn btn--secondary" style="width: 100%;" download="missing-you-this-xmas.epub">
+            Download Author's Edition EPUB
           </a>
         </div>
       </div>
