--- a/works/bffs/index.html
+++ b/works/bffs/index.html
@@ -68,13 +68,11 @@
           <p class="work-header__description" style="margin-bottom: var(--space-lg);">
             When Trace’s suspicious girlfriend demands he bring a chaperone to his friend’s wedding, he talks his best friend Gabe into helping him teach her a lesson. What starts as Trace’s simple plan for harmless revenge quickly spirals into something far more complicated than either of them expected.
           </p>
-          <a href="../../works/pdfs/story-name.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="story-name.pdf">
-            <!--Download Author's Edition PDF -->
-            PDF Coming Soon!
+          <a href="../../works/pdfs/best-friends-forever.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="best-friends-forever.pdf">
+            Download Author's Edition PDF
           </a>
-          <a href="../../works/epubs/story-name.epub" class="btn btn--secondary" style="width: 100%;" download="story-name.epub">
-            <!--Download Author's Edition EPUB -->
-            EPUB Coming Soon!
+          <a href="../../works/epubs/best-friends-forever.epub" class="btn btn--secondary" style="width: 100%;" download="best-friends-forever.epub">
+            Download Author's Edition EPUB
           </a>
         </div>
       </div>
