--- a/works/effortless-beauty/index.html
+++ b/works/effortless-beauty/index.html
@@ -68,13 +68,11 @@
           <p class="work-header__description" style="margin-bottom: var(--space-lg);">
             Sam Lane has perfected the art of minimal effort—working IT from his couch, taking every possible shortcut, and avoiding anything that resembles actual work. When a mysterious free gym trial appears in his mail, it seems like the universe finally delivering a solution that requires zero initiative on his part. But after just a few gentle yoga classes and convenient lifestyle changes, Sam discovers that some shortcuts come with dramatic consequences.
           </p>
-          <a href="../../works/pdfs/story-name.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="story-name.pdf">
-            <!--Download Author's Edition PDF -->
-            PDF Coming Soon!
+          <a href="../../works/pdfs/effortless-beauty.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="effortless-beauty.pdf">
+            Download Author's Edition PDF
           </a>
-          <a href="../../works/epubs/story-name.epub" class="btn btn--secondary" style="width: 100%;" download="story-name.epub">
-            <!--Download Author's Edition EPUB -->
-            EPUB Coming Soon!
+          <a href="../../works/epubs/effortless-beauty.epub" class="btn btn--secondary" style="width: 100%;" download="effortless-beauty.epub">
+            Download Author's Edition EPUB
           </a>
         </div>
       </div>
