--- a/works/tits-tates/index.html
+++ b/works/tits-tates/index.html
@@ -63,16 +63,18 @@
             Short Story
           </p>
           <p style="font-size: var(--text-sm); color: var(--color-rose); margin-bottom: var(--space-lg); font-weight: 500;">
-            #Magical #Age Regression #Deals/Bets/Dares
+            #Magical #AgeRegression #Deals/Bets/Dares
           </p>
           <p class="work-header__description" style="margin-bottom: var(--space-lg);">
             Two brothers. One inheritance. A roommate agreement they should have read more carefully. When Alex and Brad Tate move into their late parents' house, they think their biggest problem is learning to live together. They're wrong. Some contracts have terms that can't be negotiated--and consequences that can't be undone.
           </p>
-          <a href="../../works/pdfs/tits-tates.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);">
-            Download Author's Edition PDF
+          <a href="../../works/pdfs/tits-tates.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="tits-tates.pdf">
+            <!-- Download Author's Edition PDF -->
+            PDF Download Coming Soon!
           </a>
-          <a href="../../works/epubs/tits-tates.epub" class="btn btn--secondary" style="width: 100%;">
-            Download Author's Edition EPUB
+          <a href="../../works/epubs/tits-tates.epub" class="btn btn--secondary" style="width: 100%;" download="tits-tates.epub">
+            <!-- Download Author's Edition EPUB -->
+            EPUB Download Coming Soon!
           </a>
         </div>
       </div>
@@ -87,28 +89,28 @@
         <li class="toc__item">
           <a href="chapter-1.html" class="toc__link">
             <span class="toc__chapter-num">1</span>
-            <span class="toc__chapter-title">Chapter One</span>
+            <span class="toc__chapter-title">Part One: Episodes 1&2</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
         <li class="toc__item">
           <a href="chapter-2.html" class="toc__link">
             <span class="toc__chapter-num">2</span>
-            <span class="toc__chapter-title">Chapter Two</span>
+            <span class="toc__chapter-title">Part Two: Episodes 3&4</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
         <li class="toc__item">
           <a href="chapter-3.html" class="toc__link">
             <span class="toc__chapter-num">3</span>
-            <span class="toc__chapter-title">Chapter Three</span>
+            <span class="toc__chapter-title">Part Three: Episodes 5&6</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
         <li class="toc__item">
           <a href="chapter-4.html" class="toc__link">
             <span class="toc__chapter-num">4</span>
-            <span class="toc__chapter-title">Chapter Four</span>
+            <span class="toc__chapter-title">Part Four: COMING SOON!</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
