--- a/works/hexed-holidays/index.html
+++ b/works/hexed-holidays/index.html
@@ -63,7 +63,7 @@
             Series
           </p>
           <p style="font-size: var(--text-sm); color: var(--color-rose); margin-bottom: var(--space-lg); font-weight: 500;">
-            #Magical #College #Mental Changes
+            #Magical #College #MentalChanges
           </p>
           <p class="work-header__description" style="margin-bottom: var(--space-lg;">
             Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and maybe one more thing if I ever get around to writing it—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
@@ -97,6 +97,13 @@
           <a href="chapter-2.html" class="toc__link">
             <span class="toc__chapter-num">2</span>
             <span class="toc__chapter-title">Hex the Halls</span>
+            <span class="toc__arrow">&rarr;</span>
+          </a>
+        </li>
+        <li class="toc__item">
+          <a href="chapter-3.html" class="toc__link">
+            <span class="toc__chapter-num">3</span>
+            <span class="toc__chapter-title">COMING SOON?!?</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
