--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
         <h1 class="hero__title">Paige Turner</h1>
         <p class="hero__subtitle">Transgender Transformation Fiction</p>
         <p class="hero__description">
-          Oh, hi! You’ve found your way into my little corner of the genre. I write stories about the <em>slow climb</em> and the <em>irreversible fall</em>—the kind where you don't realize the trap is set until the door clicks shut. Pull up a chair and stay a while.
+          Oh, hi! You’ve found your way into my little corner of the genre. I write stories about the slow build and the <em>irreversible fall</em>—the kind where you don't realize the trap is set until the door clicks shut. But don't worry, I'm sure that won't happen to you. <em>Probably.</em>
         </p>
         <div class="btn-group">
           <a href="library.html" class="btn btn--primary">Explore My Stories</a>
@@ -143,11 +143,10 @@
       <div class="flourish"><span class="flourish__icon">✦</span></div>
       <div class="bio__text">
         <p>
-          I'm <strong>Paige Turner</strong>—and yes, the pun is <em>terrible</em>, but I simply couldn't help myself. I've been marinating in this genre since the early 2000s, lurking in the stacks long enough to see every trope and cliché imaginable. After decades of watching from the
-  sidelines, I finally decided it was time to pick up the pen and try writing something myself.
+          I'm <strong>Paige Turner</strong>—and yes, the pun is <em>terrible</em>, but I simply couldn't help myself. I've been marinating in this genre since the early 2000s, long enough to see every trope and cliché imaginable. After decades of devouring every story I could find, I finally decided to start writing the kind of fiction I was always desperate to read more of.
         </p>
         <p>
-          I'm obsessed with the psychology of the "no-win" situation: the moment when a protagonist realizes that every "logical" choice they made has led them somewhere they can <em>never</em> leave. The realization that there will be no going back? <em>Priceless</em>.
+          I'm obsessed with slow builds and no-win situations. The moment when a protagonist realizes that every "logical" choice they made has led them somewhere they can <em>never</em> leave? <em>Priceless</em>.
         </p>
       </div>
       <div class="bio__cta">
