--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@
       <div class="flourish"><span class="flourish__icon">✦</span></div>
       <div class="bio__text">
         <p>
-          I'm <strong>Paige Turner</strong>—and yes, the pun is <em>terrible</em>, but I simply couldn't help myself. I've been marinating in this genre since the early 2000s, long enough to see every trope and cliché imaginable. After decades of devouring every story I could find, I finally decided to start writing the kind of fiction I was always desperate to read more of.
+          I'm <strong>Paige Turner</strong>—and yes, the pun is <em>terrible</em>, but I simply couldn't help myself. I've been marinating in the TG fiction genre since the early 2000s, long enough to see every trope and cliché imaginable. After decades of devouring every story I could find, I finally decided to start writing the kind of fiction I was always desperate to read more of.
         </p>
         <p>
-          I'm obsessed with slow builds and no-win situations. The moment when a protagonist realizes that every "logical" choice they made has led them somewhere they can <em>never</em> leave? <em>Priceless</em>.
+          I'm obsessed with elegant traps and no-win situations. The moment when our protagonist realizes that every "logical" choice he made has led him into a world of femininity he will never escape? <em>Priceless</em>.
         </p>
       </div>
       <div class="bio__cta">
