--- a/works/tits-tates/index.html
+++ b/works/tits-tates/index.html
@@ -131,7 +131,14 @@
         <li class="toc__item">
           <a href="chapter-7.html" class="toc__link">
             <span class="toc__chapter-num">7</span>
-            <span class="toc__chapter-title">Episode 7: Coming Soon</span>
+            <span class="toc__chapter-title">Episode 7: Cougar Town</span>
+            <span class="toc__arrow">&rarr;</span>
+          </a>
+        </li>
+        <li class="toc__item">
+          <a href="chapter-8.html" class="toc__link">
+            <span class="toc__chapter-num">8</span>
+            <span class="toc__chapter-title">Episode 8: Bottled Blonde</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
