--- a/works/tits-tates/index.html
+++ b/works/tits-tates/index.html
@@ -69,12 +69,10 @@
             Two brothers. One inheritance. A roommate agreement they should have read more carefully. When Alex and Brad Tate move into their late parents' house, they think their biggest problem is learning to live together. They're wrong. Some contracts have terms that can't be negotiated--and consequences that can't be undone.
           </p>
           <a href="../../works/pdfs/tits-tates.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="tits-tates.pdf">
-            <!-- Download Author's Edition PDF -->
-            PDF Download Coming Soon!
+            Download Author's Edition PDF
           </a>
           <a href="../../works/epubs/tits-tates.epub" class="btn btn--secondary" style="width: 100%;" download="tits-tates.epub">
-            <!-- Download Author's Edition EPUB -->
-            EPUB Download Coming Soon!
+            Download Author's Edition EPUB
           </a>
         </div>
       </div>
