--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <div class="flourish"><span class="flourish__icon">✦</span></div>
       <div class="bio__text">
         <p>
-          I'm <strong>Paige Turner</strong>—and yes, the pun is <em>terrible</em>, but I simply couldn't help myself. I've been marinating in the TG fiction genre since the early 2000s, long enough to see every trope and cliché imaginable. After decades of devouring every story I could find, I finally decided to start writing the kind of fiction I was always desperate to read more of.
+          I'm <strong>Paige Turner</strong>—and yes, the pun is <em>terrible</em>, but I simply couldn't help myself. I've been marinating in the TG fiction genre since the late '90s, long enough to see every trope and cliché imaginable. After decades of devouring every story I could find, I finally decided to start writing the kind of fiction I was always desperate to read more of.
         </p>
         <p>
           I'm obsessed with elegant traps and no-win situations. The moment when our protagonist realizes that every "logical" choice he made has led him into a world of femininity he will never escape? <em>Priceless</em>.
