--- a/works/hexed-holidays/index.html
+++ b/works/hexed-holidays/index.html
@@ -66,7 +66,7 @@
             #Magical #College #Seasonal
           </p>
           <p class="work-header__description" style="margin-bottom: var(--space-lg;">
-            Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and maybe one more thing if I ever get around to writing it—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
+            Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and one Valentine's Day prisoner's dilemma—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
           </p>
           <a href="../../works/pdfs/story-name.pdf" class="btn btn--secondary" style="width: 100%; margin-bottom: var(--space-md);" download="story-name.pdf">
             <!--Download Author's Edition PDF -->
@@ -103,7 +103,7 @@
         <li class="toc__item">
           <a href="chapter-3.html" class="toc__link">
             <span class="toc__chapter-num">3</span>
-            <span class="toc__chapter-title">COMING SOON?!?</span>
+            <span class="toc__chapter-title">Hexes and Woes</span>
             <span class="toc__arrow">&rarr;</span>
           </a>
         </li>
