--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
         </div>
         <div class="work-card__content">
           <span class="work-card__tag">Series</span>
-          <span class="work-card__tag">In Progress</span>
+          <!--<span class="work-card__tag">In Progress</span>-->
           <h2 class="work-card__title">Hexed Holidays</h2>
           <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
             #Magical #College #Seasonal
