--- a/library.html
+++ b/library.html
@@ -55,6 +55,24 @@
   <main class="library">
     <div class="library__grid">
 
+      <!-- Work Card: Hexed Holidays -->
+      <a href="works/hexed-holidays/index.html" class="work-card">
+        <div class="work-card__image">
+          <img src="images/works/hexed-cover.jpg" alt="Hexed Holidays Cover" loading="lazy">
+        </div>
+        <div class="work-card__content">
+          <span class="work-card__tag">Series</span>
+          <!--<span class="work-card__tag">In Progress</span>-->
+          <h2 class="work-card__title">Hexed Holidays</h2>
+          <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
+            #Magical #College #Seasonal
+          </p>
+          <p class="work-card__excerpt">
+            Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and one Valentine's Day prisoner's dilemma—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
+          </p>
+        </div>
+      </a>
+      
       <!-- Work Card: Highway to Elle -->
       <a href="works/highway-to-elle/index.html" class="work-card">
         <div class="work-card__image">
@@ -105,24 +123,6 @@
         </div>
       </a>
       
-      <!-- Work Card: Hexed Holidays -->
-      <a href="works/hexed-holidays/index.html" class="work-card">
-        <div class="work-card__image">
-          <img src="images/works/hexed-cover.jpg" alt="Hexed Holidays Cover" loading="lazy">
-        </div>
-        <div class="work-card__content">
-          <span class="work-card__tag">Series</span>
-          <span class="work-card__tag">In Progress</span>
-          <h2 class="work-card__title">Hexed Holidays</h2>
-          <p style="font-size: var(--text-xs); color: var(--color-rose); margin-bottom: var(--space-sm); font-weight: 500;">
-            #Magical #College #Seasonal
-          </p>
-          <p class="work-card__excerpt">
-            Kyle and Cole visit a mysterious costume shop on Halloween, and nothing is ever the same again. One Gothic nightmare, one twisted Christmas miracle, and maybe one more thing if I ever get around to writing it—tales of transformation and terror where deals always cost more than expected. The hex never quite lets you go, and the year isn't over yet.
-          </p>
-        </div>
-      </a>
-
       <!-- Work Card: Miss-ing You This Christmas -->
       <a href="works/missing-xmas/index.html" class="work-card">
         <div class="work-card__image">
